<resources>
    <string name="app_name">ViewPagerWithFragments&amp;Tabs</string>
    <string name="titem_savegenre">Save Genre</string>
    <string name="titem_savegame">Save Game</string>
    <string name="titem_gamelist">Game List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Save</string>
    <string name="tiet_categoryname">Enter Category Name</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_google">Google</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tiet_gamename">Enter Game Name</string>
    <string name="tiet_detail">Enter Game\'s Detail</string>
    <string name="tiet_photo">Enter Photo URL</string>
    <string name="tiet_price">Enter Price</string>
</resources>
