<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SaveGameFragment">

    <Spinner
        android:id="@+id/spnCategoryID"
        android:layout_width="match_parent"
        style="@style/margin_top"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        style="@style/margin_top"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCategoryID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_gamename" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        style="@style/margin_top"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDetail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_detail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        style="@style/margin_right"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_photo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        style="@style/margin_top"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        style="@style/margin_top"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/margin_right"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>